ecmascript/parser/tests/test262-error-references/fail/e922f1c6f6e5fdef.module.js.stderr
error: Expected (, got None
 --> $DIR/tests/test262-parser/fail/e922f1c6f6e5fdef.module.js:1:16
  |
1 | export default function
  |                ^^^^^^^^

